# routes/api.php
@@ -8,6 +8,7 @@ use App\Http\Controllers\Api\V1\Material\MaterialController;
 use App\Http\Controllers\Api\V1\Product\BomController;
 use App\Http\Controllers\Api\V1\Product\ProductCategoryController;
 use App\Http\Controllers\Api\V1\Product\ProductController;
+use App\Http\Controllers\Api\V1\Production\ProductionOrderController;
 
 Route::get('/user', function (Request $request) {
     return $request->user();
@@ -29,40 +30,6 @@ Route::prefix('v1')->group(function () {
         });
     });
 });
-
-
-
-/* Route::middleware('auth:sanctum')
-    ->prefix('v1')
-    ->group(function () {
-
-        Route::apiResource(
-            'product-categories',
-            ProductCategoryController::class
-        );
-        Route::apiResource('products', ProductController::class);
-          Route::apiResource(
-            'material-categories',
-            MaterialCategoryController::class
-        );
-
-        Route::apiResource(
-            'materials',
-            MaterialController::class
-        );
-         Route::apiResource(
-            'boms',
-            BomController::class
-        );
-
-        // BOM Approval
-        Route::patch(
-            'boms/{id}/approve',
-            [BomController::class, 'approve']
-        );
-
-    });
- */
 
 
 Route::prefix("v1")->group(function () {
@@ -90,24 +57,33 @@ Route::prefix("v1")->group(function () {
             'boms/{id}/approve',
             [BomController::class, 'approve']
         );
+        Route::apiResource("/production-orders", ProductionOrderController::class);
+        Route::patch(
+            '/production-orders/{productionOrder}/plan',
+            [ProductionOrderController::class, 'plan']
+        );
+        Route::patch(
+            '/production-orders/{productionOrder}/release',
+            [ProductionOrderController::class, 'release']
+        );
     });
 });
 
 
-Route::prefix("v1")->group(function(){
+Route::prefix("v1")->group(function () {
     Route::middleware([
-    'auth:sanctum',
-    'role:system_admin,warehouse_manager'
-])->group(function () {
+        'auth:sanctum',
+        'role:system_admin,warehouse_manager'
+    ])->group(function () {
 
-    Route::apiResource(
-        'material-categories',
-        MaterialCategoryController::class
-    );
+        Route::apiResource(
+            'material-categories',
+            MaterialCategoryController::class
+        );
 
-    Route::apiResource(
-        'materials',
-        MaterialController::class
-    );
-});
+        Route::apiResource(
+            'materials',
+            MaterialController::class
+        );
+    });
 });
